A few fixes.
- Fix ordering of the new "Older Notes" entry in the release notes
area to ensure it is always last.

- Fix layout issue with narrow widths clipping a few characters off the left
edge of the page.

- Remove offending href syntax leading to bogus complaints from htmlproofer.

--- a/src/sass/misc/_primary.scss
+++ b/src/sass/misc/_primary.scss
@@ -1,6 +1,5 @@
 .primary {
     .sidebar-container {
-        min-width: 10em;
         max-width: 25em;
 
         @media print {
@@ -13,7 +12,6 @@
 
     .toc-container {
         display: none;
-        min-width: 5em;
     }
 
     display: grid;
@@ -23,13 +21,9 @@
     padding-right: .5rem;
 
     @media screen AND (min-width: $bp-md) {
-        grid-template-columns: [sidebar] 16% [article] calc(84% - 1rem);
+        grid-template-columns: [sidebar] 20% [article] calc(80% - 1rem);
         padding-left: 1rem;
         padding-right: 1rem;
-    }
-
-    @media screen AND (min-width: $bp-lg) {
-        grid-template-columns: [sidebar] 20% [article] calc(80% - 1rem);
     }
 
     @media screen AND (min-width: $bp-xl) {
